[package]
name = "adventofcode2020_rust"
version = "0.1.0"
authors = ["Kowasaki <weiyinko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/1/sol.rs"

[[bin]]
name = "day2"
path = "src/2/sol.rs"

[[bin]]
name = "day3"
path = "src/3/sol.rs"

[[bin]]
name = "day4"
path = "src/4/sol.rs"

[dependencies]
